Only show the first error to the user in the Crostini setup flow.

The CrostiniManager can send multiple error callbacks. Only the first
one should be shown to the user.

Bug: 841158
Change-Id: If21222f81b609559a462a73af8c5a7bc911592fb
Reviewed-on: https://chromium-review.googlesource.com/1051406
Commit-Queue: Ben Wells <benwells@chromium.org>
Reviewed-by: Nicholas Verne <nverne@chromium.org>
Reviewed-by: Timothy Loh <timloh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557477}
Former-commit-id: 63b8c30f2764fff51f7235f1be643bfc6e1914b1